# symmetric-properties

./: .travis.yml  README.md  stack.yaml  symmetric-properties.cabal
src/Data/Monoid/: Different.hs  Same.hs  Unique.hs
test/: Spec.hs
