name:                symmetric-properties
version:             0.1.0.0
synopsis:            Initial project template from stack
description:
  Test whether every element of a 'Foldable' is the 'Same' or 'Different'.
  .
  > > allSame (replicate 1000 1)
  > True
  > > allSame [1..]
  > False
  > > allDifferent [1..1000]
  > True
  > > allDifferent (cycle [1..100])
  > False

homepage:            https://github.com/joelburget/symmetric-properties#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
copyright:           Copyright (c) 2016 Joel Burget
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Monoid.Same, Data.Monoid.Different
  build-depends:       base >= 4.7 && < 5, containers
  default-language:    Haskell2010

test-suite symmetric-properties-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , symmetric-properties
                     , hspec
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelburget/symmetric-properties
